--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,8 @@ form {
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
+@media(max-width:767px){
+    #domaine{
+        display: none;
+    }
+}
